[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemotron-reasoned-guard"
version = "0.1.0"
description = "Policy-as-code guardrails powered by NVIDIA Nemotron 3.5 Content Safety reasoning model. Get auditable, explainable safety decisions with full reasoning traces."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Cobus Greyling" }
]
keywords = [
    "nemotron", "nvidia", "nim", "safety", "guardrails", "content-safety",
    "reasoning", "policy", "llm-safety", "multimodal", "ai-safety"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
playground = [
    "gradio>=4.44.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
cli = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/cobusgreyling/nemotron-reasoned-guard"
Repository = "https://github.com/cobusgreyling/nemotron-reasoned-guard"
Issues = "https://github.com/cobusgreyling/nemotron-reasoned-guard/issues"

[project.scripts]
nemotron-guard = "nemotron_reasoned_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nemotron_reasoned_guard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
